# appium-live-view-plugin

./: .gitignore  CHANGELOG.md  README.md  index.js  package-lock.json  package.json
examples/allure-inline-interactive/: README.md  allurerc.mjs  make-demo-results.mjs
examples/allure-inline-interactive/patches/: apply.mjs  make-live-view-interactable.mjs
lib/: locators.js  parse.js  render.js  runtime-view.js  web-snapshot.js
python/: README.md  pyproject.toml
python/src/appium_live_view/: __init__.py  _assets.py  _locators.py  _parse.py  _render.py
python/tests/: test_render.py
test/: fixtures.js  render.test.js
tools/: extract-assets.mjs
